# credman

./: Cargo.toml  README.md
include/util/: argparser.h  errors.h
src/: commands.rs  db.rs  lib.rs  main.rs  objects.rs  util.rs
src/commands/: add.rs  change.rs  delete.rs  get.rs
src/db/: acc_access.c  api_access.c  general.rs  operations.rs
src/util/: argparser.c  argparser.rs  errors.rs  ioutils.rs  passgen.rs
