[package]
name = "credman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde_json = "1.0.149"

[dependencies.rusqlite]
version = "0.38.0"
features = ["bundled-sqlcipher"]

[[bin]]
name = "cman"
path = "src/main.rs"
